# smart-energy-measure

./: CRC.c  Makefile  README.md  UART1.c  UARTacceso.c  UARTconfig.c  WiFiconfig.c  mesh.c  partitions.csv  principal.c  pruebaMdns.c  sdkconfig  sdkconfig.old  webHTTP.c
include/: UART1.h  UARTacceso.h  UARTconfig.h  WiFiconfig.h  mesh.h  pruebaMdns.h  webHTTP.h
main/: CMakeLists.txt  CRC.c  Kconfig.projbuild  UART1.c  WiFiconfig.c  https_client.c  mdns_fs.c  mesh.c  meters_data.c  modbus_master.c  modbus_slave.c  nvs_rotate.c  principal.c  pruebaMdns.c  ram-heap.c  serverHTTP.c  sntp_main.c  task_verify.c  webHTTP.c
main/front/: about-us.html  app-mesh.html  app-modbus.html  app-mqtt.html  index.html  login.html  net-loc-wifi.html  net-user-log.html
main/front/css/: estilos.css  style.css
main/front/js/: boton.js  llena.js  login.js  menu-medidor.js  mesh.js  modbus.js  mqtt.js  net-loc-wifi.js  net-user-log.js
main/front/paginas/: aboutUs.html  meshconf.html  modbus.html  modbusmaster.html  mqtt.html
main/include/: CRC.h  UART1.h  WiFiconfig.h  forms.h  https_client.h  mdns_fs.h  mesh.h  meters_data.h  modbus_master.h  modbus_slave.h  nvs_rotate.h  pruebaMdns.h  ram-heap.h  sntp_summ.h  task_verify.h  webHTTP.h
